@@ -9,6 +9,7 @@ from BeautifulSoup import UnicodeDammit
 import os
 from cubetl.fs import FileReader
 import urllib2
+from cubetl import APP_NAME_VERSION
 
 
 # Get an instance of a logger
@@ -16,10 +17,19 @@ logger = logging.getLogger(__name__)
 
 
 class HttpReader(FileReader):
+    """
+    Makes an HTTP request and reads the body of a URL, returning the result as a message attribute.
+
+    .. code-block:: javascript
+
+        - !!python/object:cubetl.http.HttpReader
+          url: "http://www.cubesviewer.com/"
+          user_agent: "Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:35.0) Gecko/20100101 Firefox/35.0"
+    """
 
     url = None
 
-    user_agent = None
+    user_agent = APP_NAME_VERSION
     attempts = 3
 
     def initialize(self, ctx):
